fix tooltip background to be readable

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -113,7 +113,7 @@ color:#333;
 }
 
 QToolTip {
-background-color:transparent;
+background-color:#00c90d;
 color:#333;
 }
 
